--- a/views/searchChemical.ejs
+++ b/views/searchChemical.ejs
@@ -43,7 +43,7 @@
 
       function search()
       {
-        alert('Searching for :'+$("#txtChemSearch").val());
+        alert('Searching for you :'+$("#txtChemSearch").val());
       }
 
     </script>
